opam-version: "2.0"
maintainer: "Rizo I <rizo@hypercollective.com>"
authors: "Rizo I <rizo@hypercollective.com>"
homepage: "https://github.com/hypercollective/ocaml-coap"
bug-reports: "https://github.com/hypercollective/ocaml-coap/issues"
license: "ISC"
dev-repo: "git+https://github.com/hypercollective/ocaml-coap.git"
synopsis: "OCaml CoAP core library"
description: """
Core CoAP parser and type definitions.

This library should not be used directly by applications. Please install the
`coap` package to start using a CoAP server or client.
"""
build: [
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@doc" {with-doc}
  ]
]
depends: [
  "ocaml" {>= "4.04.1"}
  "dune" {build}
  "fmt"
  "cstruct"
  "base-bigarray"
  "stdint"
]
